# SolDrip

./: .gitignore  LICENSE  README.md  github_push.sh  package.json  save-images.html  tsconfig.json  upload-to-issue.md
app/: next.config.js  package.json  tailwind.config.js
app/components/: DividendTracker.tsx  TokenStats.tsx  UserHoldings.tsx
app/contexts/: SolDripContext.tsx
app/pages/: _app.tsx  dashboard.tsx  index.tsx
app/pages/api/: distributions.ts  token-stats.ts  user-holdings.ts
app/styles/: globals.css
app/utils/: solana.ts
assets/: create-banner.html  soldrip-logo.svg.bak
programs/soldrip/: Cargo.toml
programs/soldrip/src/: lib.rs
scripts/: deploy.ts
tests/: package.json  soldrip.test.ts  tsconfig.json
